fixed wrapping links, dropdown movement on link click, and scroll on resize

--- a/header.css
+++ b/header.css
@@ -35,7 +35,7 @@ header h1{
 
 .links {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     justify-content: space-evenly;
     align-items: center;
     list-style-type: none;
@@ -48,7 +48,6 @@ header h1{
     cursor: default;
     padding: 0.5rem 1rem;
     border-radius: 5px;
-    width: 4rem;
     text-align: center;
     color: white;
     text-decoration: none;
